fix: align delete button in side bar modals (#1157)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 }
 
 .extra-large-material-icon {
-  font-size: 36px;
+  transform: scale(1.5);
 }
 
 .large-material-icon {
